Fixed screen styles for smaller resolution screens, no overflow.

--- a/src/components/Carousel.css
+++ b/src/components/Carousel.css
@@ -58,3 +58,9 @@
     justify-content: space-evenly;
   }
 }
+
+@media screen and (max-width: 450px) {
+  .carousel-body {
+    height: 300px;
+  }
+}
