--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -10,7 +10,7 @@
 #header-logo {
   display: flex;
   width: 90%;
-  min-width: 400px;
+  min-width: 250px;
   grid-column: 2;
   margin: auto;
 }
